--- a/package.json
+++ b/package.json
@@ -60,14 +60,15 @@
     "prismjs": "1.15.0",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
+    "sass": "1.17.3",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.13.6",
     "@angular/cli": "7.0.6",
-    "@angular/compiler-cli": "7.0.4",
+    "@angular/compiler-cli": "7.2.11",
     "@angular/language-service": "7.0.4",
-    "@angular-devkit/build-angular": "0.10.6",
     "@angularclass/hmr": "2.1.3",
     "@types/jasmine": "2.8.11",
     "@types/jasminewd2": "2.0.6",
@@ -76,7 +77,7 @@
     "codelyzer": "4.5.0",
     "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "3.0.0",
+    "karma": "4.0.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "1.1.2",
