--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fuse",
   "version": "7.0.1",
+  "private": true,
   "license": "https://themeforest.net/licenses/terms/regular",
   "scripts": {
     "ng": "ng",
@@ -16,7 +17,6 @@
     "e2e": "ng e2e",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json"
   },
-  "private": true,
   "dependencies": {
     "@agm/core": "1.0.0-beta.5",
     "@angular/animations": "7.0.4",
@@ -24,6 +24,7 @@
     "@angular/common": "7.0.4",
     "@angular/compiler": "7.0.4",
     "@angular/core": "7.0.4",
+    "@angular/fire": "5.1.2",
     "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/forms": "7.0.4",
     "@angular/http": "7.0.4",
@@ -50,10 +51,12 @@
     "d3": "5.7.0",
     "date-fns": "1.29.0",
     "default-passive-events": "1.0.10",
+    "firebase": "5.9.2",
     "hammerjs": "2.0.8",
     "lodash": "4.17.11",
     "moment": "2.22.2",
     "ng2-charts": "1.6.0",
+    "ng4-social-login": "1.4.2",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.0.2",
     "ngx-cookie-service": "2.0.0",
