Router Loader April-2master

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lodash": "4.17.11",
     "moment": "2.22.2",
     "ng2-charts": "1.6.0",
+    "ng2-slim-loading-bar": "4.0.0",
     "ng4-social-login": "1.4.2",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.0.2",
