--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "hammerjs": "2.0.8",
     "lodash": "4.17.11",
     "moment": "2.22.2",
+    "ng-connection-service": "1.0.4",
     "ng2-charts": "1.6.0",
     "ng2-slim-loading-bar": "4.0.0",
     "ng4-social-login": "1.4.2",
