--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.26.4",
     "angular-in-memory-web-api": "0.7.0",
+    "angular-placeholder-shimmer": "1.2.1",
+    "angularfire2": "5.1.2",
     "chart.js": "2.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
@@ -61,6 +63,8 @@
     "ng4-social-login": "1.4.2",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.0.2",
+    "ngx-content-loader": "0.0.1",
+    "ngx-content-loading": "0.1.3",
     "ngx-cookie-service": "2.0.0",
     "ngx-toastr": "10.0.2",
     "perfect-scrollbar": "1.4.0",
