--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "7.0.4",
     "@angular/platform-browser-dynamic": "7.0.4",
     "@angular/router": "7.0.4",
+    "@ng-bootstrap/ng-bootstrap": "4.1.1",
     "@ngrx/effects": "6.1.2",
     "@ngrx/router-store": "6.1.2",
     "@ngrx/store": "6.1.2",
