--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ngx-content-loader": "0.0.1",
     "ngx-content-loading": "0.1.3",
     "ngx-cookie-service": "2.0.0",
+    "ngx-masonry": "1.1.2",
     "ngx-toastr": "10.0.2",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.15.0",
