--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@swimlane/ngx-datatable": "14.0.0",
     "@swimlane/ngx-dnd": "6.0.0",
     "@types/prismjs": "1.9.0",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
     "chart.js": "2.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
@@ -85,6 +87,9 @@
     "@types/lodash": "4.14.118",
     "@types/node": "8.9.5",
     "codelyzer": "4.5.0",
+    "es": "0.7.3",
+    "eslint": "5.16.0",
+    "eslint-plugin-typescript": "0.14.0",
     "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.0.1",
@@ -92,10 +97,12 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "0.2.2",
+    "lint": "1.1.2",
     "protractor": "5.4.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "typescript": "3.1.6",
+    "typescript-eslint-parser": "22.0.0",
     "webpack-bundle-analyzer": "3.0.3"
   }
 }
