--- a/package.json
+++ b/package.json
@@ -98,9 +98,11 @@
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "0.2.2",
     "lint": "1.1.2",
+    "prettier": "1.16.4",
     "protractor": "5.4.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
+    "tslint-config-prettier": "1.18.0",
     "typescript": "3.1.6",
     "typescript-eslint-parser": "22.0.0",
     "webpack-bundle-analyzer": "3.0.3"
